Fix overlapping tooltip arrow and tooltip contents on IE6.  Fixes #5406.  (This is a hack around an IE bug; shouldn't need that -3px.)
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@11842 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/tundra/tundra.css
+++ b/themes/tundra/tundra.css
@@ -795,6 +795,7 @@
 }
 .dj_ie6 .tundra .dijitTooltipAbove .dijitTooltipConnector {
 	background-image: url("images/tooltipConnectorDown.gif");
+	bottom: -3px;
 }
 
 .tundra .dijitTooltipLeft {
